added music to background which starts/stops when P key is pressed

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 				<p>
 					Move: WASD<br/>
 					Look: MOUSE<br/>
-          			Menu: ESC
+          			Menu: ESC<br/>
+					Music: P
 				</p>
 			</div>
 		</div>
